--- a/dev-perl/XML-Twig/ChangeLog
+++ b/dev-perl/XML-Twig/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/XML-Twig
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Twig/ChangeLog,v 1.53 2007/04/16 06:45:47 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Twig/ChangeLog,v 1.54 2007/05/05 18:12:22 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  XML-Twig-3.29.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> XML-Twig-3.28.ebuild:
   Stable on ppc64
