--- a/dev-perl/XML-Writer/ChangeLog
+++ b/dev-perl/XML-Writer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/XML-Writer
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Writer/ChangeLog,v 1.53 2007/04/16 06:46:30 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Writer/ChangeLog,v 1.54 2007/05/05 18:12:57 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  XML-Writer-0.602.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> XML-Writer-0.602.ebuild:
   Stable on ppc64
