--- a/x11-libs/libXScrnSaver/ChangeLog
+++ b/x11-libs/libXScrnSaver/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libXScrnSaver
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXScrnSaver/ChangeLog,v 1.39 2007/04/29 05:54:25 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXScrnSaver/ChangeLog,v 1.40 2007/05/05 18:13:17 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org>
+  libXScrnSaver-1.1.2.ebuild:
+  Marked stable on amd64 for bug #175465
 
   29 Apr 2007; Andrej Kacian <ticho@gentoo.org> libXScrnSaver-1.1.2.ebuild:
   Stable on x86, bug #175465.
