--- a/dev-perl/crypt-cbc/ChangeLog
+++ b/dev-perl/crypt-cbc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/crypt-cbc
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/crypt-cbc/ChangeLog,v 1.56 2007/04/16 06:47:19 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/crypt-cbc/ChangeLog,v 1.57 2007/05/05 18:14:07 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  crypt-cbc-2.22.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> crypt-cbc-2.22.ebuild:
   Stable on ppc64
