--- a/dev-perl/glib-perl/ChangeLog
+++ b/dev-perl/glib-perl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/glib-perl
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/glib-perl/ChangeLog,v 1.81 2007/04/16 06:49:32 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/glib-perl/ChangeLog,v 1.82 2007/05/05 18:15:22 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  glib-perl-1.143.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> glib-perl-1.141.ebuild:
   Stable on ppc64
