--- a/x11-libs/xcb-util/ChangeLog
+++ b/x11-libs/xcb-util/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/xcb-util
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/xcb-util/ChangeLog,v 1.20 2007/05/03 06:43:37 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/xcb-util/ChangeLog,v 1.21 2007/05/05 18:15:22 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> xcb-util-0.2.ebuild:
+  Marked stable on amd64 for bug #175465
 
   03 May 2007; Jeroen Roovers <jer@gentoo.org> xcb-util-0.2.ebuild:
   Stable for HPPA (bug #176367).
