--- a/x11-libs/libXvMC/ChangeLog
+++ b/x11-libs/libXvMC/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXvMC
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXvMC/ChangeLog,v 1.32 2007/04/29 05:56:49 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXvMC/ChangeLog,v 1.33 2007/05/05 18:15:32 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> libXvMC-1.0.4.ebuild:
+  Marked stable on amd64 for bug #175465
 
   29 Apr 2007; Andrej Kacian <ticho@gentoo.org> libXvMC-1.0.4.ebuild:
   Stable on x86, bug #175465.
