--- a/dev-perl/gnome2-vfs-perl/ChangeLog
+++ b/dev-perl/gnome2-vfs-perl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/gnome2-vfs-perl
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/gnome2-vfs-perl/ChangeLog,v 1.36 2007/03/30 15:07:51 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/gnome2-vfs-perl/ChangeLog,v 1.37 2007/05/05 18:16:00 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  gnome2-vfs-perl-1.061.ebuild:
+  ppc stable
 
   30 Mar 2007; Michael Cummings <mcummings@gentoo.org>
   gnome2-vfs-perl-1.041.ebuild, gnome2-vfs-perl-1.060.ebuild,
