--- a/dev-perl/gtk2-gladexml/ChangeLog
+++ b/dev-perl/gtk2-gladexml/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/gtk2-gladexml
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk2-gladexml/ChangeLog,v 1.33 2007/04/16 06:50:24 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk2-gladexml/ChangeLog,v 1.34 2007/05/05 18:16:38 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  gtk2-gladexml-1.006.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> gtk2-gladexml-1.006.ebuild:
   Stable on ppc64
