--- a/media-libs/mesa/ChangeLog
+++ b/media-libs/mesa/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/mesa
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.145 2007/04/29 19:08:16 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.146 2007/05/05 18:16:40 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> mesa-6.5.2-r1.ebuild:
+  Marked stable on amd64 for bug #175465
 
 *mesa-6.5.3 (29 Apr 2007)
 
