--- a/dev-perl/gtk2-perl/ChangeLog
+++ b/dev-perl/gtk2-perl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/gtk2-perl
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk2-perl/ChangeLog,v 1.81 2007/04/16 07:14:42 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk2-perl/ChangeLog,v 1.82 2007/05/05 18:17:13 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  gtk2-perl-1.142-r1.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> gtk2-perl-1.141-r1.ebuild:
   Stable on ppc64
