--- a/x11-apps/mesa-progs/ChangeLog
+++ b/x11-apps/mesa-progs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/mesa-progs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/mesa-progs/ChangeLog,v 1.35 2007/04/29 06:01:38 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/mesa-progs/ChangeLog,v 1.36 2007/05/05 18:17:51 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> mesa-progs-6.5.2.ebuild:
+  Marked stable on amd64 for bug #175465
 
   29 Apr 2007; Andrej Kacian <ticho@gentoo.org> mesa-progs-6.5.2.ebuild:
   Stable on x86, bug #175465.
