--- a/dev-perl/net-server/ChangeLog
+++ b/dev-perl/net-server/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/net-server
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/net-server/ChangeLog,v 1.51 2007/04/14 13:59:44 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/net-server/ChangeLog,v 1.52 2007/05/05 18:18:23 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  net-server-0.95.ebuild:
+  ppc stable
 
   14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   net-server-0.95.ebuild:
