--- a/dev-perl/perl-ldap/ChangeLog
+++ b/dev-perl/perl-ldap/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/perl-ldap
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/perl-ldap/ChangeLog,v 1.55 2007/04/16 07:17:53 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/perl-ldap/ChangeLog,v 1.56 2007/05/05 18:18:57 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  perl-ldap-0.34.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> perl-ldap-0.33-r1.ebuild:
   Stable on ppc64
