--- a/dev-perl/IMAP-Admin/ChangeLog
+++ b/dev-perl/IMAP-Admin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/IMAP-Admin
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IMAP-Admin/ChangeLog,v 1.3 2007/01/15 23:12:06 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IMAP-Admin/ChangeLog,v 1.4 2007/05/05 18:19:19 ticho Exp $
+
+  05 May 2007; Andrej Kacian <ticho@gentoo.org> IMAP-Admin-1.6.4.ebuild:
+  Stable on x86, bug #177074.
 
   15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   IMAP-Admin-1.6.4.ebuild:
