--- a/x11-apps/xdm/ChangeLog
+++ b/x11-apps/xdm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xdm
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.67 2007/04/29 06:05:23 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.68 2007/05/05 18:19:49 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> xdm-1.1.4.ebuild:
+  Marked stable on amd64 for bug #175465
 
   29 Apr 2007; Andrej Kacian <ticho@gentoo.org> xdm-1.1.4.ebuild:
   Stable on x86, bug #175465.
