--- a/x11-apps/xlsfonts/ChangeLog
+++ b/x11-apps/xlsfonts/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xlsfonts
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xlsfonts/ChangeLog,v 1.18 2007/04/29 06:11:17 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xlsfonts/ChangeLog,v 1.19 2007/05/05 18:22:40 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> xlsfonts-1.0.2.ebuild:
+  Marked stable on amd64 for bug #175465
 
   29 Apr 2007; Andrej Kacian <ticho@gentoo.org> xlsfonts-1.0.2.ebuild:
   Stable on x86, bug #175465.
