--- a/dev-java/nanoxml/ChangeLog
+++ b/dev-java/nanoxml/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/nanoxml
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/nanoxml/ChangeLog,v 1.12 2007/04/26 12:24:02 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/nanoxml/ChangeLog,v 1.13 2007/05/05 18:23:41 nixnut Exp $
+
+  05 May 2007; nixnut <nixnut@gentoo.org> nanoxml-2.2.3-r2.ebuild:
+  Stable on ppc wrt bug 175998
 
   26 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
   nanoxml-2.2.3-r2.ebuild:
