--- a/x11-apps/xrandr/ChangeLog
+++ b/x11-apps/xrandr/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xrandr
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xrandr/ChangeLog,v 1.30 2007/04/29 06:13:46 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xrandr/ChangeLog,v 1.31 2007/05/05 18:23:56 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> xrandr-1.2.0.ebuild:
+  Marked stable on amd64 for bug #175465
 
   29 Apr 2007; Andrej Kacian <ticho@gentoo.org> xrandr-1.2.0.ebuild:
   Stable on x86, bug #175465.
