--- a/x11-drivers/xf86-input-keyboard/ChangeLog
+++ b/x11-drivers/xf86-input-keyboard/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-input-keyboard
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-keyboard/ChangeLog,v 1.35 2007/04/29 06:17:05 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-keyboard/ChangeLog,v 1.36 2007/05/05 18:26:23 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org>
+  xf86-input-keyboard-1.1.1.ebuild:
+  Marked stable on amd64 for bug #175465
 
   29 Apr 2007; Andrej Kacian <ticho@gentoo.org>
   xf86-input-keyboard-1.1.1.ebuild:
