--- a/perl-core/Text-Balanced/ChangeLog
+++ b/perl-core/Text-Balanced/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Text-Balanced
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Text-Balanced/ChangeLog,v 1.20 2007/04/17 19:00:24 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Text-Balanced/ChangeLog,v 1.21 2007/05/05 18:28:51 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Text-Balanced-2.0.0.ebuild:
+  ppc stable
 
   17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   Text-Balanced-2.0.0.ebuild:
