--- a/perl-core/Time-HiRes/ChangeLog
+++ b/perl-core/Time-HiRes/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Time-HiRes
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Time-HiRes/ChangeLog,v 1.35 2007/04/17 18:56:28 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Time-HiRes/ChangeLog,v 1.36 2007/05/05 18:29:30 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Time-HiRes-1.97.05.ebuild:
+  ppc stable
 
   17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   Time-HiRes-1.97.05.ebuild:
