--- a/sys-apps/microcode-ctl/ChangeLog
+++ b/sys-apps/microcode-ctl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/microcode-ctl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/microcode-ctl/ChangeLog,v 1.24 2007/05/05 05:30:30 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/microcode-ctl/ChangeLog,v 1.25 2007/05/05 18:31:17 ticho Exp $
+
+  05 May 2007; Andrej Kacian <ticho@gentoo.org> microcode-ctl-1.16.ebuild:
+  Stable on x86, bug #177124.
 
 *microcode-ctl-1.17 (05 May 2007)
 
