--- a/x11-drivers/xf86-video-tdfx/ChangeLog
+++ b/x11-drivers/xf86-video-tdfx/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-tdfx
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-tdfx/ChangeLog,v 1.32 2007/04/29 06:25:58 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-tdfx/ChangeLog,v 1.33 2007/05/05 18:31:42 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org>
+  xf86-video-tdfx-1.3.0.ebuild:
+  Marked stable on amd64 for bug #175465
 
   29 Apr 2007; Andrej Kacian <ticho@gentoo.org>
   xf86-video-tdfx-1.3.0.ebuild:
