--- a/x11-drivers/xf86-video-trident/ChangeLog
+++ b/x11-drivers/xf86-video-trident/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-trident
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-trident/ChangeLog,v 1.28 2007/04/29 06:26:33 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-trident/ChangeLog,v 1.29 2007/05/05 18:32:11 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org>
+  xf86-video-trident-1.2.3.ebuild:
+  Marked stable on amd64 for bug #175465
 
   29 Apr 2007; Andrej Kacian <ticho@gentoo.org>
   xf86-video-trident-1.2.3.ebuild:
