--- a/dev-python/ruledispatch/ChangeLog
+++ b/dev-python/ruledispatch/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/ruledispatch
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ruledispatch/ChangeLog,v 1.1 2007/02/28 00:19:35 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ruledispatch/ChangeLog,v 1.2 2007/05/05 19:02:43 pythonhead Exp $
+
+*ruledispatch-0.5_pre2306 (05 May 2007)
+
+  05 May 2007; Rob Cakebread <pythonhead@gentoo.org>
+  +ruledispatch-0.5_pre2306.ebuild:
+  Version bump for turbogears 2.1.2.2. Dropped amd64 keyword until
+  decoratortools is keyworded.
 
   05 Feb 2007; Tiziano Müller <dev-zero@gentoo.org>
   ruledispatch-0.5_pre2115.ebuild:
