--- a/dev-perl/Spreadsheet-ParseExcel/ChangeLog
+++ b/dev-perl/Spreadsheet-ParseExcel/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Spreadsheet-ParseExcel
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Spreadsheet-ParseExcel/ChangeLog,v 1.14 2007/05/04 05:51:10 ian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Spreadsheet-ParseExcel/ChangeLog,v 1.15 2007/05/05 19:09:22 ian Exp $
+
+*Spreadsheet-ParseExcel-0.32 (05 May 2007)
+
+  05 May 2007; Christian Hartmann <ian@gentoo.org>
+  -Spreadsheet-ParseExcel-0.30.ebuild, -Spreadsheet-ParseExcel-0.31.ebuild,
+  +Spreadsheet-ParseExcel-0.32.ebuild:
+  Version bump; old (see upstream changelog); SRC_TEST love
 
 *Spreadsheet-ParseExcel-0.31 (04 May 2007)
 
