--- a/dev-perl/Text-German/ChangeLog
+++ b/dev-perl/Text-German/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Text-German
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-German/ChangeLog,v 1.14 2007/05/05 19:19:44 ian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-German/ChangeLog,v 1.15 2007/05/05 19:23:36 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Text-German-0.06.ebuild:
+  ppc stable
 
   05 May 2007; Christian Hartmann <ian@gentoo.org> -Text-German-0.03.ebuild,
   Text-German-0.06.ebuild:
