--- a/dev-python/pyprotocols/ChangeLog
+++ b/dev-python/pyprotocols/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pyprotocols
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyprotocols/ChangeLog,v 1.11 2007/05/05 17:18:09 pythonhead Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyprotocols/ChangeLog,v 1.12 2007/05/05 19:46:49 lucass Exp $
+
+  05 May 2007; Lukasz Strzygowski <lucass@gentoo.org>
+  pyprotocols-1.0_pre2306.ebuild:
+  Marked ~amd64 (bug #176885). Added src_test.
 
   05 May 2007; Rob Cakebread <pythonhead@gentoo.org>
   pyprotocols-1.0_pre2306.ebuild:
