--- a/sys-cluster/drbd/ChangeLog
+++ b/sys-cluster/drbd/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-cluster/drbd
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/drbd/ChangeLog,v 1.61 2007/04/26 06:32:32 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/drbd/ChangeLog,v 1.62 2007/05/05 19:49:54 xmerlin Exp $
+
+*drbd-8.0.2 (05 May 2007)
+
+  05 May 2007; Christian Zoffoli <xmerlin@gentoo.org> +drbd-8.0.2.ebuild,
+  -drbd-8.0.0.ebuild:
+  Version bump, removed old ebuild.
 
   26 Apr 2007; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
   Update for cluster herd split to hp-cluster and ha-cluster.
