--- a/dev-python/ruledispatch/ChangeLog
+++ b/dev-python/ruledispatch/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/ruledispatch
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ruledispatch/ChangeLog,v 1.2 2007/05/05 19:02:43 pythonhead Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ruledispatch/ChangeLog,v 1.3 2007/05/05 19:51:41 lucass Exp $
+
+  05 May 2007; Lukasz Strzygowski <lucass@gentoo.org>
+  ruledispatch-0.5_pre2306.ebuild:
+  Marked ~amd64 (bug #177216).
 
 *ruledispatch-0.5_pre2306 (05 May 2007)
 
