--- a/sys-libs/glibc/ChangeLog
+++ b/sys-libs/glibc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/glibc
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.514 2007/05/05 13:37:36 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.515 2007/05/05 20:11:04 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> glibc-2.5-r2.ebuild:
+  Marked stable on amd64 for bug #176712
 
   05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> glibc-2.5-r2.ebuild:
   ppc stable, bug #176712
