--- a/www-misc/libapreq/ChangeLog
+++ b/www-misc/libapreq/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-misc/libapreq
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-misc/libapreq/ChangeLog,v 1.3 2007/03/13 14:41:03 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-misc/libapreq/ChangeLog,v 1.4 2007/05/05 20:35:22 mcummings Exp $
+
+*libapreq-1.3.3 (05 May 2007)
+
+  05 May 2007; Michael Cummings <mcummings@gentoo.org>
+  +libapreq-1.3.3.ebuild:
+  Version bump
 
   13 Mar 2007; Raúl Porcel <armin76@gentoo.org> libapreq-1.3.ebuild:
   x86 stable
