--- a/app-benchmarks/jmeter/ChangeLog
+++ b/app-benchmarks/jmeter/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-benchmarks/jmeter
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-benchmarks/jmeter/ChangeLog,v 1.26 2006/08/05 21:42:43 nichoj Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-benchmarks/jmeter/ChangeLog,v 1.27 2007/05/05 20:48:29 betelgeuse Exp $
+
+*jmeter-2.0.1-r2 (05 May 2007)
+
+  05 May 2007; Petteri Räty <betelgeuse@gentoo.org>
+  +jmeter-2.0.1-r2.ebuild:
+  Migrate to splitted ant, fix emerging with JAVA_PKG_STRICT and make
+  dependency on bsh optional via the beanshell use flag.
 
   05 Aug 2006; Joshua Nichols <nichoj@gentoo.org> jmeter-2.0.1-r1.ebuild:
   Fixed dependencies to account for java-strict.
@@ -10,7 +17,7 @@
   Fix digests.
 
   22 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>
-  +jmeter-2.0.1-r1.ebuild:
+  jmeter-2.0.1-r1.ebuild:
   Migrated to Generation 2.
 
   13 Dec 2005; Joshua Nichols <nichoj@gentoo.org> jmeter-1.9.1.ebuild,
