--- a/dev-java/jsr181/ChangeLog
+++ b/dev-java/jsr181/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/jsr181
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jsr181/ChangeLog,v 1.5 2007/05/01 18:59:10 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jsr181/ChangeLog,v 1.6 2007/05/05 20:53:03 nelchael Exp $
+
+*jsr181-1.0 (05 May 2007)
+
+  05 May 2007; Krzysiek Pawlik <nelchael@gentoo.org> -jsr181-1.ebuild,
+  +jsr181-1.0.ebuild:
+  Change version from 1 to 1.0 to avoid versioned jar warning.
 
 *jsr181-1 (01 May 2007)
 
