--- a/sys-fs/udev/ChangeLog
+++ b/sys-fs/udev/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/udev
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.301 2007/05/04 14:14:51 zzam Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.302 2007/05/05 21:24:57 uberlord Exp $
+
+  05 May 2007; Roy Marples <uberlord@gentoo.org> files/udev-start-110-r1.sh:
+  Work with dash again.
 
 *udev-110-r1 (04 May 2007)
 
