--- a/dev-java/jax-ws/ChangeLog
+++ b/dev-java/jax-ws/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jax-ws
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jax-ws/ChangeLog,v 1.1 2007/05/01 19:31:21 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jax-ws/ChangeLog,v 1.2 2007/05/05 21:41:12 nelchael Exp $
+
+  05 May 2007; Krzysiek Pawlik <nelchael@gentoo.org> jax-ws-2.0.1.ebuild:
+  Set needed jsr181 version to 1.0
 
 *jax-ws-2.0.1 (01 May 2007)
 
