--- a/dev-java/fscript/ChangeLog
+++ b/dev-java/fscript/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/fscript
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/fscript/ChangeLog,v 1.12 2007/04/28 20:32:41 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/fscript/ChangeLog,v 1.13 2007/05/05 22:37:22 betelgeuse Exp $
+
+*fscript-1.17 (05 May 2007)
+
+  05 May 2007; Petteri Räty <betelgeuse@gentoo.org> +fscript-1.17.ebuild:
+  Version bump. Added src_test.
 
 *fscript-1.15-r1 (28 Apr 2007)
 
