--- a/dev-python/turbokid/ChangeLog
+++ b/dev-python/turbokid/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/turbokid
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/turbokid/ChangeLog,v 1.1 2007/02/28 00:13:37 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/turbokid/ChangeLog,v 1.2 2007/05/05 23:33:36 pythonhead Exp $
+
+*turbokid-1.0.1 (05 May 2007)
+
+  05 May 2007; Rob Cakebread <pythonhead@gentoo.org> -turbokid-0.9.9.ebuild,
+  +turbokid-1.0.1.ebuild:
+  Version bump, removed old version.
 
   05 Feb 2007; Tiziano Müller <dev-zero@gentoo.org> turbokid-0.9.9.ebuild,
   +metadata.xml:
