--- a/sys-apps/paludis/ChangeLog
+++ b/sys-apps/paludis/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/paludis
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/paludis/ChangeLog,v 1.58 2007/04/23 20:59:11 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/paludis/ChangeLog,v 1.59 2007/05/05 23:55:52 ferdy Exp $
+
+*paludis-0.24.1 (05 May 2007)
+
+  05 May 2007; Fernando J. Pereda <ferdy@gentoo.org> +paludis-0.24.1.ebuild:
+  New upstream version.
 
   23 Apr 2007; Raúl Porcel <armin76@gentoo.org> paludis-0.22.2.ebuild:
   Add ~ia64
