--- a/media-libs/atlas-c++/ChangeLog
+++ b/media-libs/atlas-c++/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/atlas-c++
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/atlas-c++/ChangeLog,v 1.17 2007/02/22 01:46:28 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/atlas-c++/ChangeLog,v 1.18 2007/05/06 00:28:03 tupone Exp $
+
+  06 May 2007; Tupone Alfredo <tupone@gentoo.org> atlas-c++-0.4.5.ebuild,
+  atlas-c++-0.5.92.ebuild, atlas-c++-0.6.0.ebuild:
+  Fixing home page. Bug #177263 by Salah Coronya
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
