--- a/dev-lang/scala/ChangeLog
+++ b/dev-lang/scala/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/scala
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/scala/ChangeLog,v 1.1 2007/05/04 17:22:19 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/scala/ChangeLog,v 1.2 2007/05/06 00:38:40 ali_bush Exp $
+
+  06 May 2007; Alistair John Bush <ali_bush@gentoo.org> scala-2.4.0.ebuild:
+  Added ~amd64 for bug 147599
 
 *scala-2.4.0 (04 May 2007)
 
