--- a/games-action/blobandconquer/ChangeLog
+++ b/games-action/blobandconquer/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-action/blobandconquer
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/blobandconquer/ChangeLog,v 1.2 2007/02/27 12:39:17 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-action/blobandconquer/ChangeLog,v 1.3 2007/05/06 00:46:08 mr_bones_ Exp $
+
+*blobandconquer-0.90 (06 May 2007)
+
+  06 May 2007; Michael Sterrett <mr_bones_@gentoo.org>
+  +blobandconquer-0.90.ebuild:
+  version bump
 
   27 Feb 2007; Simon Stelling <blubb@gentoo.org> blobandconquer-0.8.ebuild:
   marked ~amd64; bug 167102
