--- a/app-dicts/mecab-ipadic/ChangeLog
+++ b/app-dicts/mecab-ipadic/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-dicts/mecab-ipadic
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/mecab-ipadic/ChangeLog,v 1.9 2007/03/11 15:28:41 hattya Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/mecab-ipadic/ChangeLog,v 1.10 2007/05/06 04:46:18 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  mecab-ipadic-2.7.0.20060707.ebuild:
+  ppc stable
 
   11 Mar 2007; Akinori Hattori <hattya@gentoo.org>
   mecab-ipadic-2.7.0.20060707.ebuild:
