--- a/dev-libs/tre/ChangeLog
+++ b/dev-libs/tre/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/tre
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/tre/ChangeLog,v 1.20 2007/03/12 15:24:44 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/tre/ChangeLog,v 1.21 2007/05/06 04:47:15 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> tre-0.7.4.ebuild:
+  ppc stable
 
   12 Mar 2007; Raúl Porcel <armin76@gentoo.org> tre-0.7.4.ebuild:
   x86 stable
