--- a/app-i18n/skim-scim-anthy/ChangeLog
+++ b/app-i18n/skim-scim-anthy/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/skim-scim-anthy
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/skim-scim-anthy/ChangeLog,v 1.13 2007/04/29 06:28:16 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/skim-scim-anthy/ChangeLog,v 1.14 2007/05/06 04:47:59 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  skim-scim-anthy-1.2.2.ebuild:
+  ppc stable
 
 *skim-scim-anthy-1.2.3 (29 Apr 2007)
 
