--- a/app-admin/ccze/ChangeLog
+++ b/app-admin/ccze/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/ccze
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/ccze/ChangeLog,v 1.20 2007/04/09 22:18:52 joker Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/ccze/ChangeLog,v 1.21 2007/05/06 04:48:33 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  ccze-0.2.1-r2.ebuild:
+  ppc stable
 
   09 Apr 2007; Christian Birchinger <joker@gentoo.org> ccze-0.2.1-r2.ebuild:
   Added sparc stable keyword
