--- a/app-i18n/freewnn/ChangeLog
+++ b/app-i18n/freewnn/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/freewnn
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/freewnn/ChangeLog,v 1.31 2007/04/28 15:42:16 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/freewnn/ChangeLog,v 1.32 2007/05/06 04:49:46 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  freewnn-1.1.1_alpha21.ebuild:
+  ppc stable
 
   28 Apr 2007; Torsten Veller <tove@gentoo.org>
   freewnn-1.1.1_alpha20.ebuild, freewnn-1.1.1_alpha20-r1.ebuild,
