--- a/app-mobilephone/gammu/ChangeLog
+++ b/app-mobilephone/gammu/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-mobilephone/gammu
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/gammu/ChangeLog,v 1.35 2007/03/31 08:10:26 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/gammu/ChangeLog,v 1.36 2007/05/06 04:51:11 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  gammu-1.09.00.ebuild:
+  ppc stable
 
 *gammu-1.10.0-r1 (31 Mar 2007)
 
