--- a/app-mobilephone/gnokii/ChangeLog
+++ b/app-mobilephone/gnokii/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-mobilephone/gnokii
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/gnokii/ChangeLog,v 1.52 2007/04/15 19:59:48 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/gnokii/ChangeLog,v 1.53 2007/05/06 04:52:06 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  gnokii-0.6.14-r2.ebuild:
+  ppc stable
 
   15 Apr 2007; Markus Rothe <corsair@gentoo.org> gnokii-0.6.14-r2.ebuild:
   Stable on ppc64
