--- a/app-office/abiword/ChangeLog
+++ b/app-office/abiword/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/abiword
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/abiword/ChangeLog,v 1.178 2007/04/24 13:11:31 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/abiword/ChangeLog,v 1.179 2007/05/06 04:52:53 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  abiword-2.4.6.ebuild:
+  ppc stable
 
   24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> abiword-2.4.6.ebuild:
   Stable on sparc
